cbor: only need to check map value order.

If we enforce that each new map value is greater than the previous one
then that ensures that no duplicates are allowed without doing a lookup
for every insert.

Bug: 827551
Change-Id: Idcc24b1070cc1707362f37a7f76198053882148a
Reviewed-on: https://chromium-review.googlesource.com/982610
Commit-Queue: Adam Langley <agl@chromium.org>
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547546}
Former-commit-id: 565f5a3f82c45eb2a0da9d56696dbd5e00d8938b