components/cbor/cbor_reader.h
@@ -61,7 +61,6 @@ class CBOR_EXPORT CBORReader {
     TOO_MUCH_NESTING,
     INVALID_UTF8,
     EXTRANEOUS_DATA,
-    DUPLICATE_KEY,
     OUT_OF_ORDER_KEY,
     NON_MINIMAL_CBOR_ENCODING,
     UNSUPPORTED_SIMPLE_VALUE,
@@ -142,7 +141,6 @@ class CBOR_EXPORT CBORReader {
                                            int max_nesting_level);
   bool CanConsume(uint64_t bytes);
   void CheckExtraneousData();
-  bool CheckDuplicateKey(const CBORValue& new_key, CBORValue::MapValue* map);
   bool HasValidUTF8Format(const std::string& string_data);
   bool CheckOutOfOrderKey(const CBORValue& new_key, CBORValue::MapValue* map);
   bool CheckMinimalEncoding(uint8_t additional_bytes, uint64_t uint_data);
